# sailingrobot

./: .cproject  .gitignore  .gitmodules  .project  ASPire.mk  ActiveNode.h  CMakeLists.txt  CMakeLists.txt.bak  GPSupdater.cpp  GPSupdater.h  Janet.mk  Makefile  Makefile.tests  MessageBus.cpp  MessageBus.h  MockPosition.cpp  MockPosition.h  Node.h  NodeIDs.h  PWMValues.h  README.md  RealPosition.cpp  RealPosition.h  SR_AstaFile.asta  SailingRobot.cpp  SailingRobot.h  WRSC.h  WindsensorController.cpp  WindsensorController.h  addWaypoints.py  add_waypoints.sh  area_scanning.xml  areascanning.db  asr.db  cfg_main_test.cpp  codebase.sh  config_ASPire.json  config_Janet.json  config_Velvet.json  configuration.json  (+53 more)
NavigationSystem/: ASPire.mk  CMakeLists.txt  CourseRegulatorNode.h  HTTP_sync_test.mk  Janet.mk  Velvet.mk  ais_integration.mk  ais_integration_test.mk  ais_integration_tests.mk  current_sensor_integration_test.mk  data.ais  dev-lnm.mk  integration_tests.mk  integration_tests_ASPire.mk  integration_tests_Velvet.mk  line-follow.mk  main.cpp  main_ASPire.cpp  main_janet.cpp  main_lnm.cpp  main_velvet.cpp  makefile  marine_sensor_integration_test.mk  marine_sensor_test.mk  myfile.ais  nohup.out  obstacle_detection_test.mk  pointList.sql  tests.mk  unit_tests.mk
NavigationSystem/DataBase/: DBHandler.cpp  DBHandler.h  DBLogger.cpp  DBLogger.h  DBLoggerNode.cpp  DBLoggerNode.h  readConfig.cpp  readConfig.h
NavigationSystem/DataBase/archived-dbhandler-branch-content/: DBHandler.h  SQLiteDataStore.cpp
NavigationSystem/DataCollection/: DataCollectionMgrNode.cpp  DataCollectionMgrNode.h
NavigationSystem/Database/: DBHandler.cpp  DBHandler.h  DBLogger.cpp  DBLogger.h  DBLoggerNode.cpp  DBLoggerNode.h  readConfig.cpp  readConfig.h
NavigationSystem/HTTPSync/: HTTPSyncNode.cpp  HTTPSyncNode.h
NavigationSystem/Hardwares/: ActuatorNode-notused.cpp  ActuatorNode-notused.h  ActuatorNode.cpp  ActuatorNode.h  ActuatorNodeASPire.cpp  ActuatorNodeASPire.h  ActuatorNodeJanet.cpp  ActuatorNodeJanet.h  ActuatorNodeVelvet.cpp  ActuatorNodeVelvet.h  ArduinoNode.cpp  ArduinoNode.h  ArduinoNodeForWindSensor.cpp  ArduinoNodeForWindSensor.h  CANAISNode.cpp  CANAISNode.h  CANArduinoNode.cpp  CANArduinoNode.h  CANCurrentSensorNode.cpp  CANCurrentSensorNode.h  CANDatalistener.cpp  CANFeedbackReceiver.cpp  CANFeedbackReceiver.h  CANGPSDNode.cpp  CANGPSDNode.h  CANMarineSensorReceiver.cpp  CANMarineSensorReceiver.h  CANMarineSensorTransmissionNode.cpp  CANMarineSensorTransmissionNode.h  CANSolarTrackerNode.cpp  CANSolarTrackerNode.h  CANWindsensorNode.cpp  CANWindsensorNode.h  CV7Node.cpp  CV7Node.h  GPSDNode.cpp  GPSDNode.h  HMC6343Node.cpp  HMC6343Node.h  LidarLiteNode.cpp  (+5 more)
NavigationSystem/Hardwares/AtlasScientificController/: AtlasScientific.cpp  AtlasScientific.h
NavigationSystem/Hardwares/CAN_Services/: CANDatalistener.cpp  CANDatalistener.h  CANFrameReceiver.cpp  CANFrameReceiver.h  CANPGNReceiver.h  CANService.cpp  (+12 more)
NavigationSystem/Libs/: README.md
NavigationSystem/LowLevelControllers/: CourseRegulatorNode.cpp  CourseRegulatorNode.h  LowLevelController.cpp  LowLevelController.h  LowLevelControllerNodeASPire.cpp  LowLevelControllerNodeASPire.h  LowLevelControllerNodeJanet.cpp  LowLevelControllerNodeJanet.h  SailControlNode.cpp  SailControlNode.h  SailSpeedRegulatorNode.cpp  SailSpeedRegulatorNode.h  SpeedRegulatorNode.cpp  SpeedRegulatorNode.h  WindVaneController.cpp  WindVaneController.h  WingsailControlNode.cpp  WingsailControlNode.h
NavigationSystem/Math/: CourseCalculation.cpp  CourseCalculation.h  CourseMath.cpp  CourseMath.h  Float16Compressor.h  Utility.cpp  Utility.h
NavigationSystem/MessageBus/: ActiveNode.cpp  ActiveNode.h  Message.h  MessageBus.cpp  MessageBus.h  MessageDeserialiser.cpp  MessageDeserialiser.h  MessageSerialiser.cpp  MessageSerialiser.h  MessageTypes.h  Node.h  NodeIDs.h
NavigationSystem/Messages/: AISDataMsg.h  ASPireActuatorFeedbackMsg.h  ActuatorControlASPireMessage.h  ActuatorPositionMsg.h  ArduinoDataMsg.h  CompassDataMsg.h  CourseDataMsg.h  CurrentSensorDataMsg.h  DataCollectionStartMsg.h  DataCollectionStopMsg.h  DataRequestMsg.h  DesiredCourseMsg.h  ExternalControlMsg.h  GPSDataMsg.h  JanetActuatorFeedbackMsg.h  LidarMsg.h  LocalConfigChangeMsg.h  LocalNavigationMsg.h  LocalWaypointChangeMsg.h  MarineSensorDataMsg.h  MarineSensorDataRequestMsg.h  NavigationControlMsg.h  ObstacleVectorMsg.h  PowerTrackMsg.h  RequestCourseMsg.h  RudderCommandMsg.h  SailCommandMsg.h  ServerConfigsReceivedMsg.h  ServerWaypointsReceivedMsg.h  SolarDataMsg.h  StateMessage.h  ThermalImagerDataMsg.h  VelvetActuatorFeedbackMsg.h  VesselStateMsg.h  WaypointDataMsg.h  WaypointStationKeepingMsg.h  WindDataMsg.h  WindStateMsg.h  WingSailCommandMsg.h
NavigationSystem/Navigation/: LineFollowNode.cpp  LineFollowNode.h  LineFollowSpeedController.cpp  LineFollowSpeedController.h  StationKeepingNode.cpp  StationKeepingNode.h  WaypointMgrNode.cpp  WaypointMgrNode.h
NavigationSystem/Network/: DataLink.cpp  DataLink.h  LinuxSerialDataLink.cpp  LinuxSerialDataLink.h  NetworkFrame.h  SLIP.h  TCPServer.cpp  TCPServer.h  XbeePacketNetwork.cpp  XbeePacketNetwork.h
NavigationSystem/Simulation/: SimulationNode.cpp  SimulationNode.h
NavigationSystem/SystemServices/: CourseRegulator.cpp  CourseRegulator.h  Logger.cpp  Logger.h  SoftsailControl.cpp  SoftsailControl.h  SysClock.cpp  SysClock.h  Timer.cpp  Timer.h  WingsailControl.cpp  WingsailControl.h  Wrapper.h
NavigationSystem/Tests/: Makefile  README.md  runner.cpp  runnerHardware.cpp
NavigationSystem/WorldState/: AISProcessing.cpp  AISProcessing.h  CameraProcessingUtility.cpp  CameraProcessingUtility.h  PowerTrackNode.cpp  PowerTrackNode.h  StateEstimationNode.cpp  StateEstimationNode.h  ThermalImagerProcessing.cpp  VesselStateNode.cpp  VesselStateNode.h  WindStateNode.cpp  WindStateNode.h
NavigationSystem/Xbee/: Xbee.cpp  Xbee.h  XbeeSyncNode.cpp  XbeeSyncNode.h
NavigationSystem/waypointrouting/: Commands.h  RudderCommand.cpp  SailCommand.cpp  SailCommand.h  TackAngle.cpp  TackAngle.h  WaypointRouting.cpp  WaypointRouting.h
(+1085 files in other folders)
