cmake_minimum_required(VERSION 3.3)
project(sailingrobot)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(LIB_WIRINGPI
        libs/wiringPi/devLib/ds1302.c
        libs/wiringPi/devLib/ds1302.h
        libs/wiringPi/devLib/font.h
        libs/wiringPi/devLib/gertboard.c
        libs/wiringPi/devLib/gertboard.h
        libs/wiringPi/devLib/lcd.c
        libs/wiringPi/devLib/lcd.h
        libs/wiringPi/devLib/lcd128x64.c
        libs/wiringPi/devLib/lcd128x64.h
        libs/wiringPi/devLib/maxdetect.c
        libs/wiringPi/devLib/maxdetect.h
        libs/wiringPi/devLib/piFace.c
        libs/wiringPi/devLib/piFace.h
        libs/wiringPi/devLib/piFaceOld.c
        libs/wiringPi/devLib/piGlow.c
        libs/wiringPi/devLib/piGlow.h
        libs/wiringPi/devLib/piNes.c
        libs/wiringPi/devLib/piNes.h
        libs/wiringPi/devLib/scrollPhat.c
        libs/wiringPi/devLib/scrollPhat.h
        libs/wiringPi/devLib/scrollPhatFont.h
        libs/wiringPi/examples/Gertboard/7segments.c
        libs/wiringPi/examples/Gertboard/buttons.c
        libs/wiringPi/examples/Gertboard/gertboard.c
        libs/wiringPi/examples/Gertboard/record.c
        libs/wiringPi/examples/Gertboard/temperature.c
        libs/wiringPi/examples/Gertboard/voltmeter.c
        libs/wiringPi/examples/Gertboard/vumeter.c
        libs/wiringPi/examples/PiFace/blink.c
        libs/wiringPi/examples/PiFace/buttons.c
        libs/wiringPi/examples/PiFace/ladder.c
        libs/wiringPi/examples/PiFace/metro.c
        libs/wiringPi/examples/PiFace/motor.c
        libs/wiringPi/examples/PiFace/reaction.c
        libs/wiringPi/examples/PiGlow/piglow.c
        libs/wiringPi/examples/PiGlow/piGlow0.c
        libs/wiringPi/examples/PiGlow/piGlow1.c
        libs/wiringPi/examples/q2w/binary.c
        libs/wiringPi/examples/q2w/blink-io.c
        libs/wiringPi/examples/q2w/blink.c
        libs/wiringPi/examples/q2w/bright.c
        libs/wiringPi/examples/q2w/button.c
        libs/wiringPi/examples/q2w/volts.c
        libs/wiringPi/examples/scrollPhat/scphat.c
        libs/wiringPi/examples/scrollPhat/test.c
        libs/wiringPi/examples/blink.c
        libs/wiringPi/examples/blink12.c
        libs/wiringPi/examples/blink12drcs.c
        libs/wiringPi/examples/blink6drcs.c
        libs/wiringPi/examples/blink8.c
        libs/wiringPi/examples/clock.c
        libs/wiringPi/examples/delayTest.c
        libs/wiringPi/examples/ds1302.c
        libs/wiringPi/examples/header.h
        libs/wiringPi/examples/isr-osc.c
        libs/wiringPi/examples/isr.c
        libs/wiringPi/examples/lcd-adafruit.c
        libs/wiringPi/examples/lcd.c
        libs/wiringPi/examples/lowPower.c
        libs/wiringPi/examples/max31855.c
        libs/wiringPi/examples/nes.c
        libs/wiringPi/examples/okLed.c
        libs/wiringPi/examples/pwm.c
        libs/wiringPi/examples/rht03.c
        libs/wiringPi/examples/serialRead.c
        libs/wiringPi/examples/serialTest.c
        libs/wiringPi/examples/servo.c
        libs/wiringPi/examples/softPwm.c
        libs/wiringPi/examples/softTone.c
        libs/wiringPi/examples/speed.c
        libs/wiringPi/examples/spiSpeed.c
        libs/wiringPi/examples/wfi.c
        libs/wiringPi/gpio/gpio.c
        libs/wiringPi/gpio/pins.c
        libs/wiringPi/gpio/readall.c
        libs/wiringPi/gpio/version.h
        libs/wiringPi/wiringPi/ads1115.c
        libs/wiringPi/wiringPi/ads1115.h
        libs/wiringPi/wiringPi/drcSerial.c
        libs/wiringPi/wiringPi/drcSerial.h
        libs/wiringPi/wiringPi/max31855.c
        libs/wiringPi/wiringPi/max31855.h
        libs/wiringPi/wiringPi/max5322.c
        libs/wiringPi/wiringPi/max5322.h
        libs/wiringPi/wiringPi/mcp23008.c
        libs/wiringPi/wiringPi/mcp23008.h
        libs/wiringPi/wiringPi/mcp23016.c
        libs/wiringPi/wiringPi/mcp23016.h
        libs/wiringPi/wiringPi/mcp23016reg.h
        libs/wiringPi/wiringPi/mcp23017.c
        libs/wiringPi/wiringPi/mcp23017.h
        libs/wiringPi/wiringPi/mcp23s08.c
        libs/wiringPi/wiringPi/mcp23s08.h
        libs/wiringPi/wiringPi/mcp23s17.c
        libs/wiringPi/wiringPi/mcp23s17.h
        libs/wiringPi/wiringPi/mcp23x08.h
        libs/wiringPi/wiringPi/mcp23x0817.h
        libs/wiringPi/wiringPi/mcp3002.c
        libs/wiringPi/wiringPi/mcp3002.h
        libs/wiringPi/wiringPi/mcp3004.c
        libs/wiringPi/wiringPi/mcp3004.h
        libs/wiringPi/wiringPi/mcp3422.c
        libs/wiringPi/wiringPi/mcp3422.h
        libs/wiringPi/wiringPi/mcp4802.c
        libs/wiringPi/wiringPi/mcp4802.h
        libs/wiringPi/wiringPi/pcf8574.c
        libs/wiringPi/wiringPi/pcf8574.h
        libs/wiringPi/wiringPi/pcf8591.c
        libs/wiringPi/wiringPi/pcf8591.h
        libs/wiringPi/wiringPi/piHiPri.c
        libs/wiringPi/wiringPi/piThread.c
        libs/wiringPi/wiringPi/sn3218.c
        libs/wiringPi/wiringPi/sn3218.h
        libs/wiringPi/wiringPi/softPwm.c
        libs/wiringPi/wiringPi/softPwm.h
        libs/wiringPi/wiringPi/softServo.c
        libs/wiringPi/wiringPi/softServo.h
        libs/wiringPi/wiringPi/softTone.c
        libs/wiringPi/wiringPi/softTone.h
        libs/wiringPi/wiringPi/sr595.c
        libs/wiringPi/wiringPi/sr595.h
        libs/wiringPi/wiringPi/wiringPi.c
        libs/wiringPi/wiringPi/wiringPi.h
        libs/wiringPi/wiringPi/wiringPiI2C.c
        libs/wiringPi/wiringPi/wiringPiI2C.h
        libs/wiringPi/wiringPi/wiringPiSPI.c
        libs/wiringPi/wiringPi/wiringPiSPI.h
        libs/wiringPi/wiringPi/wiringSerial.c
        libs/wiringPi/wiringPi/wiringSerial.h
        libs/wiringPi/wiringPi/wiringShift.c
        libs/wiringPi/wiringPi/wiringShift.h
        libs/wiringPi/wiringPi/wpiExtensions.c
        libs/wiringPi/wiringPi/wpiExtensions.h)

set(LIB_JSON
        libs/json/benchmarks/benchmarks.cpp
        libs/json/benchmarks/benchpress.hpp
        libs/json/benchmarks/cxxopts.hpp
        libs/json/doc/examples/array.cpp
        libs/json/doc/examples/at__object_t_key_type.cpp
        libs/json/doc/examples/at__object_t_key_type_const.cpp
        libs/json/doc/examples/at__size_type.cpp
        libs/json/doc/examples/at__size_type_const.cpp
        libs/json/doc/examples/at_json_pointer.cpp
        libs/json/doc/examples/at_json_pointer_const.cpp
        libs/json/doc/examples/back.cpp
        libs/json/doc/examples/basic_json.cpp
        libs/json/doc/examples/basic_json__array_t.cpp
        libs/json/doc/examples/basic_json__basic_json.cpp
        libs/json/doc/examples/basic_json__boolean_t.cpp
        libs/json/doc/examples/basic_json__CompatibleArrayType.cpp
        libs/json/doc/examples/basic_json__CompatibleIntegerNumberType.cpp
        libs/json/doc/examples/basic_json__CompatibleNumberFloatType.cpp
        libs/json/doc/examples/basic_json__CompatibleObjectType.cpp
        libs/json/doc/examples/basic_json__CompatibleStringType.cpp
        libs/json/doc/examples/basic_json__const_int.cpp
        libs/json/doc/examples/basic_json__copyassignment.cpp
        libs/json/doc/examples/basic_json__InputIt_InputIt.cpp
        libs/json/doc/examples/basic_json__istream.cpp
        libs/json/doc/examples/basic_json__list_init_t.cpp
        libs/json/doc/examples/basic_json__moveconstructor.cpp
        libs/json/doc/examples/basic_json__nullptr_t.cpp
        libs/json/doc/examples/basic_json__number_float_t.cpp
        libs/json/doc/examples/basic_json__number_integer_t.cpp
        libs/json/doc/examples/basic_json__object_t.cpp
        libs/json/doc/examples/basic_json__size_type_basic_json.cpp
        libs/json/doc/examples/basic_json__string_t.cpp
        libs/json/doc/examples/basic_json__string_t_value_type.cpp
        libs/json/doc/examples/basic_json__value.cpp
        libs/json/doc/examples/basic_json__value_t.cpp
        libs/json/doc/examples/begin.cpp
        libs/json/doc/examples/cbegin.cpp
        libs/json/doc/examples/cend.cpp
        libs/json/doc/examples/clear.cpp
        libs/json/doc/examples/count.cpp
        libs/json/doc/examples/crbegin.cpp
        libs/json/doc/examples/crend.cpp
        libs/json/doc/examples/diff.cpp
        libs/json/doc/examples/dump.cpp
        libs/json/doc/examples/empty.cpp
        libs/json/doc/examples/end.cpp
        libs/json/doc/examples/erase__IteratorType.cpp
        libs/json/doc/examples/erase__IteratorType_IteratorType.cpp
        libs/json/doc/examples/erase__key_type.cpp
        libs/json/doc/examples/erase__size_type.cpp
        libs/json/doc/examples/find__key_type.cpp
        libs/json/doc/examples/flatten.cpp
        libs/json/doc/examples/front.cpp
        libs/json/doc/examples/get__PointerType.cpp
        libs/json/doc/examples/get__ValueType_const.cpp
        libs/json/doc/examples/get_ptr.cpp
        libs/json/doc/examples/get_ref.cpp
        libs/json/doc/examples/insert.cpp
        libs/json/doc/examples/insert__count.cpp
        libs/json/doc/examples/insert__ilist.cpp
        libs/json/doc/examples/insert__range.cpp
        libs/json/doc/examples/is_array.cpp
        libs/json/doc/examples/is_boolean.cpp
        libs/json/doc/examples/is_discarded.cpp
        libs/json/doc/examples/is_null.cpp
        libs/json/doc/examples/is_number.cpp
        libs/json/doc/examples/is_number_float.cpp
        libs/json/doc/examples/is_number_integer.cpp
        libs/json/doc/examples/is_number_unsigned.cpp
        libs/json/doc/examples/is_object.cpp
        libs/json/doc/examples/is_primitive.cpp
        libs/json/doc/examples/is_string.cpp
        libs/json/doc/examples/is_structured.cpp
        libs/json/doc/examples/json_pointer.cpp
        libs/json/doc/examples/json_pointer__to_string.cpp
        libs/json/doc/examples/max_size.cpp
        libs/json/doc/examples/object.cpp
        libs/json/doc/examples/operator__equal.cpp
        libs/json/doc/examples/operator__equal__nullptr_t.cpp
        libs/json/doc/examples/operator__greater.cpp
        libs/json/doc/examples/operator__greaterequal.cpp
        libs/json/doc/examples/operator__less.cpp
        libs/json/doc/examples/operator__lessequal.cpp
        libs/json/doc/examples/operator__notequal.cpp
        libs/json/doc/examples/operator__notequal__nullptr_t.cpp
        libs/json/doc/examples/operator__value_t.cpp
        libs/json/doc/examples/operator__ValueType.cpp
        libs/json/doc/examples/operator_deserialize.cpp
        libs/json/doc/examples/operator_serialize.cpp
        libs/json/doc/examples/operatorarray__key_type.cpp
        libs/json/doc/examples/operatorarray__key_type_const.cpp
        libs/json/doc/examples/operatorarray__size_type.cpp
        libs/json/doc/examples/operatorarray__size_type_const.cpp
        libs/json/doc/examples/operatorjson_pointer.cpp
        libs/json/doc/examples/operatorjson_pointer_const.cpp
        libs/json/doc/examples/parse__istream__parser_callback_t.cpp
        libs/json/doc/examples/parse__string__parser_callback_t.cpp
        libs/json/doc/examples/patch.cpp
        libs/json/doc/examples/push_back.cpp
        libs/json/doc/examples/push_back__initializer_list.cpp
        libs/json/doc/examples/push_back__object_t__value.cpp
        libs/json/doc/examples/rbegin.cpp
        libs/json/doc/examples/README.cpp
        libs/json/doc/examples/rend.cpp
        libs/json/doc/examples/size.cpp
        libs/json/doc/examples/swap__array_t.cpp
        libs/json/doc/examples/swap__object_t.cpp
        libs/json/doc/examples/swap__reference.cpp
        libs/json/doc/examples/swap__string_t.cpp
        libs/json/doc/examples/type.cpp
        libs/json/doc/examples/unflatten.cpp
        libs/json/src/json.hpp
        libs/json/test/src/catch.hpp
        libs/json/test/src/fuzz.cpp
        libs/json/test/src/unit.cpp)

set(LIB_EIGEN
        libs/Eigen/src/Cholesky/LDLT.h
        libs/Eigen/src/Cholesky/LLT.h
        libs/Eigen/src/Cholesky/LLT_MKL.h
        libs/Eigen/src/CholmodSupport/CholmodSupport.h
        libs/Eigen/src/Core/arch/AltiVec/Complex.h
        libs/Eigen/src/Core/arch/AltiVec/PacketMath.h
        libs/Eigen/src/Core/arch/Default/Settings.h
        libs/Eigen/src/Core/arch/NEON/Complex.h
        libs/Eigen/src/Core/arch/NEON/PacketMath.h
        libs/Eigen/src/Core/arch/SSE/Complex.h
        libs/Eigen/src/Core/arch/SSE/MathFunctions.h
        libs/Eigen/src/Core/arch/SSE/PacketMath.h
        libs/Eigen/src/Core/products/CoeffBasedProduct.h
        libs/Eigen/src/Core/products/GeneralBlockPanelKernel.h
        libs/Eigen/src/Core/products/GeneralMatrixMatrix.h
        libs/Eigen/src/Core/products/GeneralMatrixMatrix_MKL.h
        libs/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h
        libs/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_MKL.h
        libs/Eigen/src/Core/products/GeneralMatrixVector.h
        libs/Eigen/src/Core/products/GeneralMatrixVector_MKL.h
        libs/Eigen/src/Core/products/Parallelizer.h
        libs/Eigen/src/Core/products/SelfadjointMatrixMatrix.h
        libs/Eigen/src/Core/products/SelfadjointMatrixMatrix_MKL.h
        libs/Eigen/src/Core/products/SelfadjointMatrixVector.h
        libs/Eigen/src/Core/products/SelfadjointMatrixVector_MKL.h
        libs/Eigen/src/Core/products/SelfadjointProduct.h
        libs/Eigen/src/Core/products/SelfadjointRank2Update.h
        libs/Eigen/src/Core/products/TriangularMatrixMatrix.h
        libs/Eigen/src/Core/products/TriangularMatrixMatrix_MKL.h
        libs/Eigen/src/Core/products/TriangularMatrixVector.h
        libs/Eigen/src/Core/products/TriangularMatrixVector_MKL.h
        libs/Eigen/src/Core/products/TriangularSolverMatrix.h
        libs/Eigen/src/Core/products/TriangularSolverMatrix_MKL.h
        libs/Eigen/src/Core/products/TriangularSolverVector.h
        libs/Eigen/src/Core/util/BlasUtil.h
        libs/Eigen/src/Core/util/Constants.h
        libs/Eigen/src/Core/util/DisableStupidWarnings.h
        libs/Eigen/src/Core/util/ForwardDeclarations.h
        libs/Eigen/src/Core/util/Macros.h
        libs/Eigen/src/Core/util/Memory.h
        libs/Eigen/src/Core/util/Meta.h
        libs/Eigen/src/Core/util/MKL_support.h
        libs/Eigen/src/Core/util/NonMPL2.h
        libs/Eigen/src/Core/util/ReenableStupidWarnings.h
        libs/Eigen/src/Core/util/StaticAssert.h
        libs/Eigen/src/Core/util/XprHelper.h
        libs/Eigen/src/Core/Array.h
        libs/Eigen/src/Core/ArrayBase.h
        libs/Eigen/src/Core/ArrayWrapper.h
        libs/Eigen/src/Core/Assign.h
        libs/Eigen/src/Core/Assign_MKL.h
        libs/Eigen/src/Core/BandMatrix.h
        libs/Eigen/src/Core/Block.h
        libs/Eigen/src/Core/BooleanRedux.h
        libs/Eigen/src/Core/CommaInitializer.h
        libs/Eigen/src/Core/CoreIterators.h
        libs/Eigen/src/Core/CwiseBinaryOp.h
        libs/Eigen/src/Core/CwiseNullaryOp.h
        libs/Eigen/src/Core/CwiseUnaryOp.h
        libs/Eigen/src/Core/CwiseUnaryView.h
        libs/Eigen/src/Core/DenseBase.h
        libs/Eigen/src/Core/DenseCoeffsBase.h
        libs/Eigen/src/Core/DenseStorage.h
        libs/Eigen/src/Core/Diagonal.h
        libs/Eigen/src/Core/DiagonalMatrix.h
        libs/Eigen/src/Core/DiagonalProduct.h
        libs/Eigen/src/Core/Dot.h
        libs/Eigen/src/Core/EigenBase.h
        libs/Eigen/src/Core/Flagged.h
        libs/Eigen/src/Core/ForceAlignedAccess.h
        libs/Eigen/src/Core/Functors.h
        libs/Eigen/src/Core/Fuzzy.h
        libs/Eigen/src/Core/GeneralProduct.h
        libs/Eigen/src/Core/GenericPacketMath.h
        libs/Eigen/src/Core/GlobalFunctions.h
        libs/Eigen/src/Core/IO.h
        libs/Eigen/src/Core/Map.h
        libs/Eigen/src/Core/MapBase.h
        libs/Eigen/src/Core/MathFunctions.h
        libs/Eigen/src/Core/Matrix.h
        libs/Eigen/src/Core/MatrixBase.h
        libs/Eigen/src/Core/NestByValue.h
        libs/Eigen/src/Core/NoAlias.h
        libs/Eigen/src/Core/NumTraits.h
        libs/Eigen/src/Core/PermutationMatrix.h
        libs/Eigen/src/Core/PlainObjectBase.h
        libs/Eigen/src/Core/ProductBase.h
        libs/Eigen/src/Core/Random.h
        libs/Eigen/src/Core/Redux.h
        libs/Eigen/src/Core/Ref.h
        libs/Eigen/src/Core/Replicate.h
        libs/Eigen/src/Core/ReturnByValue.h
        libs/Eigen/src/Core/Reverse.h
        libs/Eigen/src/Core/Select.h
        libs/Eigen/src/Core/SelfAdjointView.h
        libs/Eigen/src/Core/SelfCwiseBinaryOp.h
        libs/Eigen/src/Core/SolveTriangular.h
        libs/Eigen/src/Core/StableNorm.h
        libs/Eigen/src/Core/Stride.h
        libs/Eigen/src/Core/Swap.h
        libs/Eigen/src/Core/Transpose.h
        libs/Eigen/src/Core/Transpositions.h
        libs/Eigen/src/Core/TriangularMatrix.h
        libs/Eigen/src/Core/VectorBlock.h
        libs/Eigen/src/Core/VectorwiseOp.h
        libs/Eigen/src/Core/Visitor.h
        libs/Eigen/src/Eigen2Support/Geometry/AlignedBox.h
        libs/Eigen/src/Eigen2Support/Geometry/All.h
        libs/Eigen/src/Eigen2Support/Geometry/AngleAxis.h
        libs/Eigen/src/Eigen2Support/Geometry/Hyperplane.h
        libs/Eigen/src/Eigen2Support/Geometry/ParametrizedLine.h
        libs/Eigen/src/Eigen2Support/Geometry/Quaternion.h
        libs/Eigen/src/Eigen2Support/Geometry/Rotation2D.h
        libs/Eigen/src/Eigen2Support/Geometry/RotationBase.h
        libs/Eigen/src/Eigen2Support/Geometry/Scaling.h
        libs/Eigen/src/Eigen2Support/Geometry/Transform.h
        libs/Eigen/src/Eigen2Support/Geometry/Translation.h
        libs/Eigen/src/Eigen2Support/Block.h
        libs/Eigen/src/Eigen2Support/Cwise.h
        libs/Eigen/src/Eigen2Support/CwiseOperators.h
        libs/Eigen/src/Eigen2Support/Lazy.h
        libs/Eigen/src/Eigen2Support/LeastSquares.h
        libs/Eigen/src/Eigen2Support/LU.h
        libs/Eigen/src/Eigen2Support/Macros.h
        libs/Eigen/src/Eigen2Support/MathFunctions.h
        libs/Eigen/src/Eigen2Support/Memory.h
        libs/Eigen/src/Eigen2Support/Meta.h
        libs/Eigen/src/Eigen2Support/Minor.h
        libs/Eigen/src/Eigen2Support/QR.h
        libs/Eigen/src/Eigen2Support/SVD.h
        libs/Eigen/src/Eigen2Support/TriangularSolver.h
        libs/Eigen/src/Eigen2Support/VectorBlock.h
        libs/Eigen/src/Eigenvalues/ComplexEigenSolver.h
        libs/Eigen/src/Eigenvalues/ComplexSchur.h
        libs/Eigen/src/Eigenvalues/ComplexSchur_MKL.h
        libs/Eigen/src/Eigenvalues/EigenSolver.h
        libs/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h
        libs/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h
        libs/Eigen/src/Eigenvalues/HessenbergDecomposition.h
        libs/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h
        libs/Eigen/src/Eigenvalues/RealQZ.h
        libs/Eigen/src/Eigenvalues/RealSchur.h
        libs/Eigen/src/Eigenvalues/RealSchur_MKL.h
        libs/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h
        libs/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_MKL.h
        libs/Eigen/src/Eigenvalues/Tridiagonalization.h
        libs/Eigen/src/Geometry/arch/Geometry_SSE.h
        libs/Eigen/src/Geometry/AlignedBox.h
        libs/Eigen/src/Geometry/AngleAxis.h
        libs/Eigen/src/Geometry/EulerAngles.h
        libs/Eigen/src/Geometry/Homogeneous.h
        libs/Eigen/src/Geometry/Hyperplane.h
        libs/Eigen/src/Geometry/OrthoMethods.h
        libs/Eigen/src/Geometry/ParametrizedLine.h
        libs/Eigen/src/Geometry/Quaternion.h
        libs/Eigen/src/Geometry/Rotation2D.h
        libs/Eigen/src/Geometry/RotationBase.h
        libs/Eigen/src/Geometry/Scaling.h
        libs/Eigen/src/Geometry/Transform.h
        libs/Eigen/src/Geometry/Translation.h
        libs/Eigen/src/Geometry/Umeyama.h
        libs/Eigen/src/Householder/BlockHouseholder.h
        libs/Eigen/src/Householder/Householder.h
        libs/Eigen/src/Householder/HouseholderSequence.h
        libs/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h
        libs/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h
        libs/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h
        libs/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h
        libs/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h
        libs/Eigen/src/Jacobi/Jacobi.h
        libs/Eigen/src/LU/arch/Inverse_SSE.h
        libs/Eigen/src/LU/Determinant.h
        libs/Eigen/src/LU/FullPivLU.h
        libs/Eigen/src/LU/Inverse.h
        libs/Eigen/src/LU/PartialPivLU.h
        libs/Eigen/src/LU/PartialPivLU_MKL.h
        libs/Eigen/src/MetisSupport/MetisSupport.h
        libs/Eigen/src/misc/blas.h
        libs/Eigen/src/misc/Image.h
        libs/Eigen/src/misc/Kernel.h
        libs/Eigen/src/misc/Solve.h
        libs/Eigen/src/misc/SparseSolve.h
        libs/Eigen/src/OrderingMethods/Amd.h
        libs/Eigen/src/OrderingMethods/Eigen_Colamd.h
        libs/Eigen/src/OrderingMethods/Ordering.h
        libs/Eigen/src/PardisoSupport/PardisoSupport.h
        libs/Eigen/src/PaStiXSupport/PaStiXSupport.h
        libs/Eigen/src/plugins/ArrayCwiseBinaryOps.h
        libs/Eigen/src/plugins/ArrayCwiseUnaryOps.h
        libs/Eigen/src/plugins/BlockMethods.h
        libs/Eigen/src/plugins/CommonCwiseBinaryOps.h
        libs/Eigen/src/plugins/CommonCwiseUnaryOps.h
        libs/Eigen/src/plugins/MatrixCwiseBinaryOps.h
        libs/Eigen/src/plugins/MatrixCwiseUnaryOps.h
        libs/Eigen/src/QR/ColPivHouseholderQR.h
        libs/Eigen/src/QR/ColPivHouseholderQR_MKL.h
        libs/Eigen/src/QR/FullPivHouseholderQR.h
        libs/Eigen/src/QR/HouseholderQR.h
        libs/Eigen/src/QR/HouseholderQR_MKL.h
        libs/Eigen/src/SparseCholesky/SimplicialCholesky.h
        libs/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h
        libs/Eigen/src/SparseCore/AmbiVector.h
        libs/Eigen/src/SparseCore/CompressedStorage.h
        libs/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h
        libs/Eigen/src/SparseCore/MappedSparseMatrix.h
        libs/Eigen/src/SparseCore/SparseBlock.h
        libs/Eigen/src/SparseCore/SparseColEtree.h
        libs/Eigen/src/SparseCore/SparseCwiseBinaryOp.h
        libs/Eigen/src/SparseCore/SparseCwiseUnaryOp.h
        libs/Eigen/src/SparseCore/SparseDenseProduct.h
        libs/Eigen/src/SparseCore/SparseDiagonalProduct.h
        libs/Eigen/src/SparseCore/SparseDot.h
        libs/Eigen/src/SparseCore/SparseFuzzy.h
        libs/Eigen/src/SparseCore/SparseMatrix.h
        libs/Eigen/src/SparseCore/SparseMatrixBase.h
        libs/Eigen/src/SparseCore/SparsePermutation.h
        libs/Eigen/src/SparseCore/SparseProduct.h
        libs/Eigen/src/SparseCore/SparseRedux.h
        libs/Eigen/src/SparseCore/SparseSelfAdjointView.h
        libs/Eigen/src/SparseCore/SparseSparseProductWithPruning.h
        libs/Eigen/src/SparseCore/SparseTranspose.h
        libs/Eigen/src/SparseCore/SparseTriangularView.h
        libs/Eigen/src/SparseCore/SparseUtil.h
        libs/Eigen/src/SparseCore/SparseVector.h
        libs/Eigen/src/SparseCore/SparseView.h
        libs/Eigen/src/SparseCore/TriangularSolver.h
        libs/Eigen/src/SparseLU/SparseLU.h
        libs/Eigen/src/SparseLU/SparseLU_column_bmod.h
        libs/Eigen/src/SparseLU/SparseLU_column_dfs.h
        libs/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h
        libs/Eigen/src/SparseLU/SparseLU_gemm_kernel.h
        libs/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h
        libs/Eigen/src/SparseLU/SparseLU_kernel_bmod.h
        libs/Eigen/src/SparseLU/SparseLU_Memory.h
        libs/Eigen/src/SparseLU/SparseLU_panel_bmod.h
        libs/Eigen/src/SparseLU/SparseLU_panel_dfs.h
        libs/Eigen/src/SparseLU/SparseLU_pivotL.h
        libs/Eigen/src/SparseLU/SparseLU_pruneL.h
        libs/Eigen/src/SparseLU/SparseLU_relax_snode.h
        libs/Eigen/src/SparseLU/SparseLU_Structs.h
        libs/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h
        libs/Eigen/src/SparseLU/SparseLU_Utils.h
        libs/Eigen/src/SparseLU/SparseLUImpl.h
        libs/Eigen/src/SparseQR/SparseQR.h
        libs/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h
        libs/Eigen/src/StlSupport/details.h
        libs/Eigen/src/StlSupport/StdDeque.h
        libs/Eigen/src/StlSupport/StdList.h
        libs/Eigen/src/StlSupport/StdVector.h
        libs/Eigen/src/SuperLUSupport/SuperLUSupport.h
        libs/Eigen/src/SVD/JacobiSVD.h
        libs/Eigen/src/SVD/JacobiSVD_MKL.h
        libs/Eigen/src/SVD/UpperBidiagonalization.h
        libs/Eigen/src/UmfPackSupport/UmfPackSupport.h)

set(UTILITY
        utility/MockPosition.cpp
        utility/MockPosition.h
        utility/Position.cpp
        utility/Position.h
        utility/RealPosition.cpp
        utility/RealPosition.h
        utility/Timer.cpp
        utility/Timer.h
        utility/Utility.cpp
        utility/Utility.h)

set(BEHAVIOUR
        behaviourclass/CollisionAvoidanceBehaviour.cpp
        behaviourclass/CollisionAvoidanceBehaviour.h
        behaviourclass/LineFollowBehaviour.cpp
        behaviourclass/LineFollowBehaviour.h
        #behaviourclass/OLD_CollisionAvoidanceBehave.cpp
        #behaviourclass/OLD_CollisionAvoidanceBehave.h
        behaviourclass/RoutingBehaviour.cpp
        behaviourclass/RoutingBehaviour.h
        #behaviourclass/test.cpp
        behaviourclass/WaypointBehaviour.cpp
        behaviourclass/WaypointBehaviour.h)

set(XML_PARSER
        xmlparser/pugi/pugiconfig.hpp
        xmlparser/pugi/pugixml.cpp
        xmlparser/pugi/pugixml.hpp
        xmlparser/src/xml_log.cpp
        xmlparser/src/xml_log.h
        xmlparser/src/xmlparser.cpp)

set(SAILBOT_SOURCE_FILES
    AnalogArduino/AnalogArduino.cpp
    AnalogArduino/AnalogArduino.h
    AnalogArduino/AR_UNO.cpp
    AnalogArduino/AR_UNO.h
    AnalogArduino/MockAnalogArduino.cpp
    AnalogArduino/MockAnalogArduino.h
    AnalogArduino/myWiringI2C.cpp
    AnalogArduino/myWiringI2C.h
    ${BEHAVIOUR}
    Compass/Compass.cpp
    Compass/Compass.h
    Compass/HMC6343.cpp
    Compass/HMC6343.h
    Compass/MockCompass.cpp
    Compass/MockCompass.h
    coursecalculation/CourseCalculation.cpp
    coursecalculation/CourseCalculation.h
    coursecalculation/CourseMath.cpp
    coursecalculation/CourseMath.h
    CV7/CV7.cpp
    CV7/CV7.h
    CV7/MockWindsensor.cpp
    CV7/MockWindsensor.h
    CV7/UtilityLibrary.cpp
    CV7/UtilityLibrary.h
    CV7/Windsensor.cpp
    CV7/Windsensor.h
    dbhandler/DBHandler.cpp
    dbhandler/DBHandler.h
    gps/GPS.h
    gps/GPSReader.cpp
    gps/GPSReader.h
    gps/MockGPSReader.cpp
    gps/MockGPSReader.h
    httpsync/HTTPSync.cpp
    httpsync/HTTPSync.h
    i2ccontroller/I2CController.cpp
    i2ccontroller/I2CController.h
    ${LIB_EIGEN}
    ${LIB_JSON}
    ${LIB_WIRINGPI}
    logger/Logger.cpp
    logger/Logger.h
    models/AccelerationModel.h
    models/AnalogArduinoModel.h
    models/CompassModel.h
    models/GPSModel.h
    models/PositionModel.h
    models/SystemStateModel.h
    models/WaypointModel.h
    models/WindsensorModel.h
    ruddercommand/RudderCommand.cpp
    ruddercommand/RudderCommand.h
    sailcommand/SailCommand.cpp
    sailcommand/SailCommand.h
    servocontroller/Actuator.h
    servocontroller/MaestroController.cpp
    servocontroller/MaestroController.h
    servocontroller/MockMaestroController.cpp
    servocontroller/MockMaestroController.h
    servocontroller/MockServoObject.cpp
    servocontroller/MockServoObject.h
    servocontroller/SensorObject.cpp
    servocontroller/SensorObject.h
    servocontroller/ServoObject.cpp
    servocontroller/ServoObject.h
    tests/db/main.cpp
    tests/db/test_dbhandler.cpp
    tests/integration/IntegrationTests/AnalogArduinoIntegrationTest.cpp
    tests/integration/IntegrationTests/CompassIntegrationTest.cpp
    tests/integration/IntegrationTests/CV7IntegrationTest.cpp
    tests/integration/IntegrationTests/gpsIntegrationTest.cpp
    tests/integration/IntegrationTests/HTTPSyncIntegrationTest.cpp
    tests/integration/IntegrationTests/LoggerIntegrationTest.cpp
    tests/integration/IntegrationTests/ServocontrollerIntegrationTest.cpp
    tests/integration/IntegrationTests/ServocontrollerIntegrationTestSequence.cpp
    tests/integration/IntegrationTests/XBeeIntegrationTest.cpp
    tests/integration/IntegrationTests/XBeeSyncIntegrationTest.cpp
    tests/testsuite/main.cpp
    tests/testsuite/testCompass.cpp
    tests/testsuite/testCourseCalculation.cpp
    tests/testsuite/testCourseMath.cpp
    tests/testsuite/testCV7.cpp
    tests/testsuite/testExternalCommand.cpp
    tests/testsuite/testPosition.cpp
    tests/testsuite/testRudderCommand.cpp
    tests/testsuite/testSailCommand.cpp
    tests/testsuite/testSystemState.cpp
    tests/testsuite/testThreadRAII.cpp
    tests/testsuite/testUtility.cpp
    tests/testsuite/testWaypointRouting.cpp
    tests/testsuite/testWindVaneController.cpp
    tests/testsuite/testxBee.cpp
    tests/catch.hpp
    thread/ExternalCommand.cpp
    thread/ExternalCommand.h
    thread/SystemState.cpp
    thread/SystemState.h
    thread/ThreadRAII.cpp
    thread/ThreadRAII.h
    ${UTILITY}
    waypointrouting/Commands.cpp
    waypointrouting/Commands.h
    waypointrouting/TackAngle.cpp
    waypointrouting/TackAngle.h
    waypointrouting/WaypointRouting.cpp
    waypointrouting/WaypointRouting.h
    windvanecontroller/WindVaneController.cpp
    windvanecontroller/WindVaneController.h
    xBee/Serial.cpp
    xBee/xBee.cpp
    xBee/xBee.h
    xBee/xBeeSync.cpp
    xBee/xBeeSync.h
    xbeerelay/main.cpp
    xbeerelay/xBeeRelay.cpp
    xbeerelay/xBeeRelay.h
    ${XML_PARSER}
    GPSupdater.cpp
    GPSupdater.h
    main.cpp
    main.h
    SailingRobot.cpp
    SailingRobot.h
    WindsensorController.cpp
    WindsensorController.h)

include_directories(.)
include_directories(libs/json)

add_executable(sailingrobot
        ${SAILBOT_SOURCE_FILES})
add_executable(unitTestCollisionAvoidance
        ${LIB_EIGEN}
        ${UTILITY}
        ${BEHAVIOUR}
        behaviourclass/unitTestFile.cpp
        behaviourclass/unitTestFile.h)